# telefront

./: .env  Alembic.Dockerfile  Dockerfile  database.db  docker-compose.yaml  main.py  models.py  postgres-init.sh  pyproject.toml  tokenman.py
alembic/: env.py
alembic/versions/: 41bdf65cb9a8_.py
templates/: 2fa.html  base.html  error.html  index.html  login.html  register.html
xtun/: log.txt  url
